--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -54,7 +54,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            opensrp/web
+            pnetm/fhir-web
           tags: |
             type=ref,event=branch,key=main,tag=latest
             type=ref,event=branch,pattern=release/*,group=1
