--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: Containerize and publish to Docker
 
 on:
   push:
@@ -73,7 +73,7 @@ jobs:
         id: docker_build
         with:
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
           tags: |
             ${{ steps.meta.outputs.tags }}
           cache-from: type=gha,scope=${{ github.workflow }}
